# Mango-Money-Multiplier

./: .gitignore  1  Dockerfile  README.md  airdrop.sh  docker-compose.yml  docker.env  entrypoint.sh  lala.json  lala2.json  nginx.conf  oldREADME.md
curl-demo/: cancel_all_orders.sh  fire-curl-commands.sh  get_balances.sh  get_candles.sh  get_coins.sh  get_markets.sh  get_orderbook.sh  get_orders.sh  get_positions.sh  get_trades.sh  post_order.sh
mango-bowl/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
mango-bowl/src/: boot_server.ts  data_mapper.ts  helpers.ts  index.ts  mango_producer.ts  minion.ts  rpc_client.ts  types.ts
mango-bowl/test/: mangobowl.test.ts
mango-client-v3/: Dockerfile  README.md  package.json  tsconfig.json
mango-client-v3/examples/: app.ts  example.ts  mangoLogs.ts  registerRefId.ts  server.ts
mango-client-v3/src/: MangoAccount.ts  config.ts  ids.json  layout.ts
mango-client-v3/test/: TestGroup.ts  accounts.test.ts  cancelside.test.ts  closeaccount.test.ts  compute.test.ts  fillbook.test.ts  initRealisticDevnetGroup.ts  liquidation.test.ts  reimburse.ts  socializedloss.test.ts  utils.ts  (+1 more)
mango-service-v3/: Dockerfile  README.md  package.json  service-v3.postman_collection.json  service-v3.yml  tsconfig.json  tslint.json
py/: Dockerfile  README.md  doit.sh  example1_basic.py  example1_cancel_all_orders.py  example2_set_stink_bids.py  example3_market_maker.py  example3_market_maker.py.save  lala.json  lala2.json  pyproject.toml  test-devnet.py  test-mainnet.py
py/mango_service_v3_py/: api.py  dtos.py
(+193 files in other folders)
