[tool.poetry]
name = "mango-service-v3-python-client"
version = "0.1.1"
description = ""
authors = ["microwavedcola1 <microwavedcola@gmail.com>"]
packages = [
     { include = "mango_service_v3_py" }
]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
keywords = []
classifiers = [
]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.19.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
tenacity = "^8.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
